// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseQuantity — real-world ingredient corpus parses every line from "Best Classic Meatloaf Recipe (Just A Pinch)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "lean ground beef",
    "line": "2 lbs. lean ground beef",
    "lineText": "2 lbs. lean ground beef",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "lb",
  },
  {
    "ingredientText": "Italian breadcrumbs",
    "line": "1 cup Italian breadcrumbs",
    "lineText": "1 cup Italian breadcrumbs",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
  {
    "ingredientText": "eggs",
    "line": "2 eggs",
    "lineText": "2 eggs",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": null,
  },
  {
    "ingredientText": "onion, diced",
    "line": "1/2 cup onion, diced",
    "lineText": "1/2 cup onion, diced",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "cup",
  },
  {
    "ingredientText": "garlic powder",
    "line": "2 tsp garlic powder",
    "lineText": "2 tsp garlic powder",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "chopped parsley",
    "line": "2 tsp chopped parsley",
    "lineText": "2 tsp chopped parsley",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "salt",
    "line": "1 tsp salt",
    "lineText": "1 tsp salt",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "pepper",
    "line": "1 tsp pepper",
    "lineText": "1 tsp pepper",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "bbq sauce",
    "line": "1/2 cup bbq sauce",
    "lineText": "1/2 cup bbq sauce",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "cup",
  },
  {
    "ingredientText": "ketchup",
    "line": "1/3 cup ketchup",
    "lineText": "1/3 cup ketchup",
    "quantityMax": 0.3333333333333333,
    "quantityMin": 0.3333333333333333,
    "unit": "cup",
  },
  {
    "ingredientText": "brown sugar",
    "line": "2 tbsp brown sugar",
    "lineText": "2 tbsp brown sugar",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tbsp",
  },
  {
    "ingredientText": "yellow mustard",
    "line": "1 tsp yellow mustard",
    "lineText": "1 tsp yellow mustard",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Black Bean Chili (Just A Pinch)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "boneless pork, cut into 1/2-inch cubes",
    "line": "1 1/2 pounds boneless pork, cut into 1/2-inch cubes",
    "lineText": "1 1/2 pounds boneless pork, cut into 1/2-inch cubes",
    "quantityMax": 1.5,
    "quantityMin": 1.5,
    "unit": "lb",
  },
  {
    "ingredientText": "15 1/2-oz. cans black beans, drained",
    "line": "2 15 1/2-oz. cans black beans, drained",
    "lineText": "2 15 1/2-oz. cans black beans, drained",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": null,
  },
  {
    "ingredientText": "chopped onion",
    "line": "1 cup chopped onion",
    "lineText": "1 cup chopped onion",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
  {
    "ingredientText": "chopped yellow bell pepper",
    "line": "1 cup chopped yellow bell pepper",
    "lineText": "1 cup chopped yellow bell pepper",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
  {
    "ingredientText": "thick and chunky salsa",
    "line": "1 cup thick and chunky salsa",
    "lineText": "1 cup thick and chunky salsa",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
  {
    "ingredientText": "15 1/2-oz. can diced tomatoes, do not drain",
    "line": "1 15 1/2-oz. can diced tomatoes, do not drain",
    "lineText": "1 15 1/2-oz. can diced tomatoes, do not drain",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "cloves garlic, minced",
    "line": "2 cloves garlic, minced",
    "lineText": "2 cloves garlic, minced",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": null,
  },
  {
    "ingredientText": "chili powder",
    "line": "1 teaspoon chili powder",
    "lineText": "1 teaspoon chili powder",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "cumin",
    "line": "1/2 teaspoon cumin",
    "lineText": "1/2 teaspoon cumin",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "crushed red pepper",
    "line": "1/4 teaspoon crushed red pepper",
    "lineText": "1/4 teaspoon crushed red pepper",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "tsp",
  },
  {
    "ingredientText": null,
    "line": "sour cream, shredded Cheddar cheese (optional)",
    "lineText": "sour cream, shredded Cheddar cheese (optional)",
    "quantityMax": null,
    "quantityMin": null,
    "unit": null,
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Classic Chocolate Chip Cookies (King Arthur Baking)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "light brown sugar, packed",
    "line": "2/3 cup (142g) light brown sugar, packed",
    "lineText": "2/3 cup (142g) light brown sugar, packed",
    "quantityMax": 0.6666666666666666,
    "quantityMin": 0.6666666666666666,
    "unit": "cup",
  },
  {
    "ingredientText": "granulated sugar",
    "line": "2/3 cup (131g) granulated sugar",
    "lineText": "2/3 cup (131g) granulated sugar",
    "quantityMax": 0.6666666666666666,
    "quantityMin": 0.6666666666666666,
    "unit": "cup",
  },
  {
    "ingredientText": "unsalted butter",
    "line": "8 tablespoons (113g) unsalted butter",
    "lineText": "8 tablespoons (113g) unsalted butter",
    "quantityMax": 8,
    "quantityMin": 8,
    "unit": "tbsp",
  },
  {
    "ingredientText": "vegetable shortening",
    "line": "1/2 cup (92g) vegetable shortening",
    "lineText": "1/2 cup (92g) vegetable shortening",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "cup",
  },
  {
    "ingredientText": "table salt, (use 1/2 teaspoon salt if you use salted butter)",
    "line": "3/4 teaspoon table salt, (use 1/2 teaspoon salt if you use salted butter)",
    "lineText": "3/4 teaspoon table salt, (use 1/2 teaspoon salt if you use salted butter)",
    "quantityMax": 0.75,
    "quantityMin": 0.75,
    "unit": "tsp",
  },
  {
    "ingredientText": "King Arthur Pure Vanilla Extract",
    "line": "2 teaspoons King Arthur Pure Vanilla Extract",
    "lineText": "2 teaspoons King Arthur Pure Vanilla Extract",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "almond extract, optional",
    "line": "1/4 teaspoon almond extract, optional",
    "lineText": "1/4 teaspoon almond extract, optional",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "tsp",
  },
  {
    "ingredientText": "cider vinegar or white vinegar",
    "line": "1 teaspoon cider vinegar or white vinegar",
    "lineText": "1 teaspoon cider vinegar or white vinegar",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "baking soda",
    "line": "1 teaspoon baking soda",
    "lineText": "1 teaspoon baking soda",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "large egg",
    "line": "1 large egg",
    "lineText": "1 large egg",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "King Arthur Unbleached All-Purpose Flour",
    "line": "2 cups (240g) King Arthur Unbleached All-Purpose Flour",
    "lineText": "2 cups (240g) King Arthur Unbleached All-Purpose Flour",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "cup",
  },
  {
    "ingredientText": "semisweet chocolate chips*",
    "line": "2 cups (340g) semisweet chocolate chips*",
    "lineText": "2 cups (340g) semisweet chocolate chips*",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "cup",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Classic Vegan Chocolate Chip Cookies, 1 Bowl (Minimalist Baker)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "flaxseed meal",
    "line": "2 Tbsp flaxseed meal",
    "lineText": "2 Tbsp flaxseed meal",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tbsp",
  },
  {
    "ingredientText": "water",
    "line": "5 Tbsp water",
    "lineText": "5 Tbsp water",
    "quantityMax": 5,
    "quantityMin": 5,
    "unit": "tbsp",
  },
  {
    "ingredientText": "packed organic brown sugar",
    "line": "1/2 cup packed organic brown sugar",
    "lineText": "1/2 cup packed organic brown sugar",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "cup",
  },
  {
    "ingredientText": "organic cane sugar",
    "line": "1/3 cup organic cane sugar",
    "lineText": "1/3 cup organic cane sugar",
    "quantityMax": 0.3333333333333333,
    "quantityMin": 0.3333333333333333,
    "unit": "cup",
  },
  {
    "ingredientText": "vegan butter, room temperature (we prefer Earth Balance // 1 stick = 1/2 cup or 112 g)",
    "line": "1/2 cup vegan butter, room temperature (we prefer Earth Balance // 1 stick = 1/2 cup or 112 g)",
    "lineText": "1/2 cup vegan butter, room temperature (we prefer Earth Balance // 1 stick = 1/2 cup or 112 g)",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "cup",
  },
  {
    "ingredientText": "vanilla extract",
    "line": "2-3 tsp vanilla extract",
    "lineText": "2-3 tsp vanilla extract",
    "quantityMax": 3,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "heaping cup unbleached all-purpose flour (1 cup + 2 Tbsp as original recipe is written*)",
    "line": "1 heaping cup unbleached all-purpose flour (1 cup + 2 Tbsp as original recipe is written*)",
    "lineText": "1 heaping cup unbleached all-purpose flour (1 cup + 2 Tbsp as original recipe is written*)",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "sea salt (plus more for topping)",
    "line": "1 tsp sea salt (plus more for topping)",
    "lineText": "1 tsp sea salt (plus more for topping)",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "baking powder",
    "line": "1 tsp baking powder",
    "lineText": "1 tsp baking powder",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "vegan semi-sweet chocolate chips",
    "line": "1 cup vegan semi-sweet chocolate chips",
    "lineText": "1 cup vegan semi-sweet chocolate chips",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Easy Tomato Soup Recipe (Natasha’s Kitchen)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "unsalted butter",
    "line": "4 Tbsp unsalted butter",
    "lineText": "4 Tbsp unsalted butter",
    "quantityMax": 4,
    "quantityMin": 4,
    "unit": "tbsp",
  },
  {
    "ingredientText": "yellow onions, (3 cups finely chopped)",
    "line": "2 yellow onions, (3 cups finely chopped)",
    "lineText": "2 yellow onions, (3 cups finely chopped)",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": null,
  },
  {
    "ingredientText": "garlic cloves, (1 Tbsp minced)",
    "line": "3 garlic cloves, (1 Tbsp minced)",
    "lineText": "3 garlic cloves, (1 Tbsp minced)",
    "quantityMax": 3,
    "quantityMin": 3,
    "unit": null,
  },
  {
    "ingredientText": "crushed tomatoes, (2, 28-oz cans) with their juice, preferably San Marzano",
    "line": "56 oz crushed tomatoes, (2, 28-oz cans) with their juice, preferably San Marzano",
    "lineText": "56 oz crushed tomatoes, (2, 28-oz cans) with their juice, preferably San Marzano",
    "quantityMax": 56,
    "quantityMin": 56,
    "unit": "oz",
  },
  {
    "ingredientText": "chicken stock",
    "line": "2 cups chicken stock",
    "lineText": "2 cups chicken stock",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "cup",
  },
  {
    "ingredientText": "chopped fresh basil, plus more to serve",
    "line": "1/4 cup chopped fresh basil, plus more to serve",
    "lineText": "1/4 cup chopped fresh basil, plus more to serve",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "cup",
  },
  {
    "ingredientText": "sugar, or added to taste",
    "line": "1 Tbsp sugar, or added to taste",
    "lineText": "1 Tbsp sugar, or added to taste",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tbsp",
  },
  {
    "ingredientText": "black pepper, or to taste",
    "line": "1/2 tsp black pepper, or to taste",
    "lineText": "1/2 tsp black pepper, or to taste",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "heavy whipping cream, or to taste to combat acidity",
    "line": "1/2 cup heavy whipping cream, or to taste to combat acidity",
    "lineText": "1/2 cup heavy whipping cream, or to taste to combat acidity",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "cup",
  },
  {
    "ingredientText": "parmesan cheese, freshly grated, plus more to serve",
    "line": "1/3 cup parmesan cheese, freshly grated, plus more to serve",
    "lineText": "1/3 cup parmesan cheese, freshly grated, plus more to serve",
    "quantityMax": 0.3333333333333333,
    "quantityMin": 0.3333333333333333,
    "unit": "cup",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Gluten-Free Oatmeal Chocolate Chip Cookies (Minimalist Baker)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "almond flour or almond meal*",
    "line": "3/4 cup almond flour or almond meal*",
    "lineText": "3/4 cup almond flour or almond meal*",
    "quantityMax": 0.75,
    "quantityMin": 0.75,
    "unit": "cup",
  },
  {
    "ingredientText": "rolled oats",
    "line": "3/4 cup rolled oats",
    "lineText": "3/4 cup rolled oats",
    "quantityMax": 0.75,
    "quantityMin": 0.75,
    "unit": "cup",
  },
  {
    "ingredientText": "finely shredded (desiccated) unsweetened coconut",
    "line": "1/4 cup finely shredded (desiccated) unsweetened coconut",
    "lineText": "1/4 cup finely shredded (desiccated) unsweetened coconut",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "cup",
  },
  {
    "ingredientText": "vegan dark chocolate (chips or chopped bar)",
    "line": "1/4 cup vegan dark chocolate (chips or chopped bar)",
    "lineText": "1/4 cup vegan dark chocolate (chips or chopped bar)",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "cup",
  },
  {
    "ingredientText": "baking powder",
    "line": "3/4 tsp baking powder",
    "lineText": "3/4 tsp baking powder",
    "quantityMax": 0.75,
    "quantityMin": 0.75,
    "unit": "tsp",
  },
  {
    "ingredientText": "sea salt",
    "line": "1/4 tsp sea salt",
    "lineText": "1/4 tsp sea salt",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "tsp",
  },
  {
    "ingredientText": "packed organic brown sugar or muscovado sugar",
    "line": "1/3 cup packed organic brown sugar or muscovado sugar",
    "lineText": "1/3 cup packed organic brown sugar or muscovado sugar",
    "quantityMax": 0.3333333333333333,
    "quantityMin": 0.3333333333333333,
    "unit": "cup",
  },
  {
    "ingredientText": "aquafaba",
    "line": "1/4 cup aquafaba",
    "lineText": "1/4 cup aquafaba",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "cup",
  },
  {
    "ingredientText": "almond butter*",
    "line": "2 Tbsp almond butter*",
    "lineText": "2 Tbsp almond butter*",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tbsp",
  },
  {
    "ingredientText": "avocado oil or melted coconut oil*",
    "line": "3 Tbsp avocado oil or melted coconut oil*",
    "lineText": "3 Tbsp avocado oil or melted coconut oil*",
    "quantityMax": 3,
    "quantityMin": 3,
    "unit": "tbsp",
  },
  {
    "ingredientText": "vanilla extract",
    "line": "1/2 tsp vanilla extract",
    "lineText": "1/2 tsp vanilla extract",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Healthy Banana Bread (Cookie and Kate)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "melted coconut oil or extra-virgin olive oil or high quality vegetable oil*",
    "line": "⅓ cup (75 grams) melted coconut oil or extra-virgin olive oil or high quality vegetable oil*",
    "lineText": "⅓ cup (75 grams) melted coconut oil or extra-virgin olive oil or high quality vegetable oil*",
    "quantityMax": 0.3333333333333333,
    "quantityMin": 0.3333333333333333,
    "unit": "cup",
  },
  {
    "ingredientText": "honey (168 grams) or maple syrup (155 grams)",
    "line": "½ cup honey (168 grams) or maple syrup (155 grams)",
    "lineText": "½ cup honey (168 grams) or maple syrup (155 grams)",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "cup",
  },
  {
    "ingredientText": "eggs",
    "line": "2 eggs",
    "lineText": "2 eggs",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": null,
  },
  {
    "ingredientText": "mashed ripe bananas (about 2 ½ medium or 2 large bananas)",
    "line": "1 cup (225 grams) mashed ripe bananas (about 2 ½ medium or 2 large bananas)",
    "lineText": "1 cup (225 grams) mashed ripe bananas (about 2 ½ medium or 2 large bananas)",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
  {
    "ingredientText": "milk of choice or water",
    "line": "¼ cup (56 grams) milk of choice or water",
    "lineText": "¼ cup (56 grams) milk of choice or water",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "cup",
  },
  {
    "ingredientText": "baking soda (NOT baking powder; they aren’t the same!)",
    "line": "1 teaspoon baking soda (NOT baking powder; they aren’t the same!)",
    "lineText": "1 teaspoon baking soda (NOT baking powder; they aren’t the same!)",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "vanilla extract",
    "line": "1 teaspoon vanilla extract",
    "lineText": "1 teaspoon vanilla extract",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "salt",
    "line": "½ teaspoon salt",
    "lineText": "½ teaspoon salt",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "ground cinnamon, plus more to swirl on top",
    "line": "½ teaspoon ground cinnamon, plus more to swirl on top",
    "lineText": "½ teaspoon ground cinnamon, plus more to swirl on top",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "white whole wheat flour or regular whole wheat flour**",
    "line": "1 ¾ cups (220 grams) white whole wheat flour or regular whole wheat flour**",
    "lineText": "1 ¾ cups (220 grams) white whole wheat flour or regular whole wheat flour**",
    "quantityMax": 1.75,
    "quantityMin": 1.75,
    "unit": "cup",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Homemade Cosmic Brownies (King Arthur Baking)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "granulated sugar",
    "line": "1 3/4 cups (347g) granulated sugar",
    "lineText": "1 3/4 cups (347g) granulated sugar",
    "quantityMax": 1.75,
    "quantityMin": 1.75,
    "unit": "cup",
  },
  {
    "ingredientText": "King Arthur Unbleached All-Purpose Flour",
    "line": "1 cup (120g) King Arthur Unbleached All-Purpose Flour",
    "lineText": "1 cup (120g) King Arthur Unbleached All-Purpose Flour",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
  {
    "ingredientText": "unsweetened cocoa, Dutch-process or natural",
    "line": "3/4 cup (63g) unsweetened cocoa, Dutch-process or natural",
    "lineText": "3/4 cup (63g) unsweetened cocoa, Dutch-process or natural",
    "quantityMax": 0.75,
    "quantityMin": 0.75,
    "unit": "cup",
  },
  {
    "ingredientText": "espresso powder, optional",
    "line": "1 teaspoon espresso powder, optional",
    "lineText": "1 teaspoon espresso powder, optional",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "table salt",
    "line": "1/2 teaspoon table salt",
    "lineText": "1/2 teaspoon table salt",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "baking powder",
    "line": "1/4 teaspoon baking powder",
    "lineText": "1/4 teaspoon baking powder",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "tsp",
  },
  {
    "ingredientText": "large eggs",
    "line": "3 large eggs",
    "lineText": "3 large eggs",
    "quantityMax": 3,
    "quantityMin": 3,
    "unit": null,
  },
  {
    "ingredientText": "unsalted butter, melted",
    "line": "8 tablespoons (113g) unsalted butter, melted",
    "lineText": "8 tablespoons (113g) unsalted butter, melted",
    "quantityMax": 8,
    "quantityMin": 8,
    "unit": "tbsp",
  },
  {
    "ingredientText": "vegetable oil",
    "line": "1/4 cup (50g) vegetable oil",
    "lineText": "1/4 cup (50g) vegetable oil",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "cup",
  },
  {
    "ingredientText": "King Arthur Pure Vanilla Extract",
    "line": "2 teaspoons King Arthur Pure Vanilla Extract",
    "lineText": "2 teaspoons King Arthur Pure Vanilla Extract",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "semisweet chocolate chips",
    "line": "1 1/3 cups (227g) semisweet chocolate chips",
    "lineText": "1 1/3 cups (227g) semisweet chocolate chips",
    "quantityMax": 1.3333333333333333,
    "quantityMin": 1.3333333333333333,
    "unit": "cup",
  },
  {
    "ingredientText": "heavy cream",
    "line": "1/3 cup (76g) heavy cream",
    "lineText": "1/3 cup (76g) heavy cream",
    "quantityMax": 0.3333333333333333,
    "quantityMin": 0.3333333333333333,
    "unit": "cup",
  },
  {
    "ingredientText": "unsalted butter",
    "line": "2 tablespoons (28g) unsalted butter",
    "lineText": "2 tablespoons (28g) unsalted butter",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tbsp",
  },
  {
    "ingredientText": "sprinkles",
    "line": "2 tablespoons (27g) sprinkles",
    "lineText": "2 tablespoons (27g) sprinkles",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tbsp",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "My All-Time Favorite Chicken Stew (Budget Bytes)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "yellow onion",
    "line": "1 yellow onion",
    "lineText": "1 yellow onion",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "ribs celery",
    "line": "3 ribs celery",
    "lineText": "3 ribs celery",
    "quantityMax": 3,
    "quantityMin": 3,
    "unit": null,
  },
  {
    "ingredientText": "cloves garlic",
    "line": "4 cloves garlic",
    "lineText": "4 cloves garlic",
    "quantityMax": 4,
    "quantityMin": 4,
    "unit": null,
  },
  {
    "ingredientText": "carrots",
    "line": "½ lb. (230 g) carrots",
    "lineText": "½ lb. (230 g) carrots",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "lb",
  },
  {
    "ingredientText": "chicken thighs (boneless, skinless)",
    "line": "1¾ lbs. (800 g) chicken thighs (boneless, skinless)",
    "lineText": "1¾ lbs. (800 g) chicken thighs (boneless, skinless)",
    "quantityMax": 1.75,
    "quantityMin": 1.75,
    "unit": "lb",
  },
  {
    "ingredientText": "all-purpose flour* (divided)",
    "line": "4 Tbsp (60 g) all-purpose flour* (divided)",
    "lineText": "4 Tbsp (60 g) all-purpose flour* (divided)",
    "quantityMax": 4,
    "quantityMin": 4,
    "unit": "tbsp",
  },
  {
    "ingredientText": "butter",
    "line": "2 Tbsp (30 g) butter",
    "lineText": "2 Tbsp (30 g) butter",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tbsp",
  },
  {
    "ingredientText": "olive oil",
    "line": "1 Tbsp olive oil",
    "lineText": "1 Tbsp olive oil",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tbsp",
  },
  {
    "ingredientText": "baby potatoes (cubed Yukon also work)",
    "line": "1½ lbs. (680 g) baby potatoes (cubed Yukon also work)",
    "lineText": "1½ lbs. (680 g) baby potatoes (cubed Yukon also work)",
    "quantityMax": 1.5,
    "quantityMin": 1.5,
    "unit": "lb",
  },
  {
    "ingredientText": "dried parsley",
    "line": "1 tsp dried parsley",
    "lineText": "1 tsp dried parsley",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "dried thyme",
    "line": "½ tsp dried thyme",
    "lineText": "½ tsp dried thyme",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "dried rosemary",
    "line": "½ tsp dried rosemary",
    "lineText": "½ tsp dried rosemary",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "dried sage",
    "line": "½ tsp dried sage",
    "lineText": "½ tsp dried sage",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "black pepper (freshly cracked)",
    "line": "¼ tsp black pepper (freshly cracked)",
    "lineText": "¼ tsp black pepper (freshly cracked)",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "tsp",
  },
  {
    "ingredientText": "chicken broth",
    "line": "2 cups (500 ml) chicken broth",
    "lineText": "2 cups (500 ml) chicken broth",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "cup",
  },
  {
    "ingredientText": "vegetable broth",
    "line": "2 cups (500 ml) vegetable broth",
    "lineText": "2 cups (500 ml) vegetable broth",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "cup",
  },
  {
    "ingredientText": "fresh parsley (chopped, optional)",
    "line": "1 Tbsp fresh parsley (chopped, optional)",
    "lineText": "1 Tbsp fresh parsley (chopped, optional)",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tbsp",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Pollo Guisado (Budget Bytes)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "chicken thighs, boneless and skinless*",
    "line": "1.5 lb chicken thighs, boneless and skinless*",
    "lineText": "1.5 lb chicken thighs, boneless and skinless*",
    "quantityMax": 1.5,
    "quantityMin": 1.5,
    "unit": "lb",
  },
  {
    "ingredientText": "adobo, all-purpose seasoning",
    "line": "2 tsp adobo, all-purpose seasoning",
    "lineText": "2 tsp adobo, all-purpose seasoning",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "cooking oil",
    "line": "2 Tbsp cooking oil",
    "lineText": "2 Tbsp cooking oil",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tbsp",
  },
  {
    "ingredientText": "yellow onion, large dice",
    "line": "1 yellow onion, large dice",
    "lineText": "1 yellow onion, large dice",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "cloves garlic, finely chopped",
    "line": "3 cloves garlic, finely chopped",
    "lineText": "3 cloves garlic, finely chopped",
    "quantityMax": 3,
    "quantityMin": 3,
    "unit": null,
  },
  {
    "ingredientText": "sofrito",
    "line": "1/2 cup sofrito",
    "lineText": "1/2 cup sofrito",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "cup",
  },
  {
    "ingredientText": "tomato sauce",
    "line": "8 oz tomato sauce",
    "lineText": "8 oz tomato sauce",
    "quantityMax": 8,
    "quantityMin": 8,
    "unit": "oz",
  },
  {
    "ingredientText": "packet sazón seasoning with annatto***",
    "line": "1 packet sazón seasoning with annatto***",
    "lineText": "1 packet sazón seasoning with annatto***",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "bay leaves",
    "line": "2 bay leaves",
    "lineText": "2 bay leaves",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": null,
  },
  {
    "ingredientText": "dried oregano",
    "line": "2 tsp dried oregano",
    "lineText": "2 tsp dried oregano",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "manzanilla olives, pimiento-stuffed",
    "line": "1/4 cup manzanilla olives, pimiento-stuffed",
    "lineText": "1/4 cup manzanilla olives, pimiento-stuffed",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "cup",
  },
  {
    "ingredientText": "large potato, 2-inch dice (about 1 cup)",
    "line": "1 large potato, 2-inch dice (about 1 cup)",
    "lineText": "1 large potato, 2-inch dice (about 1 cup)",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "large carrots, 1/4-inch rounds (about 1 cup )",
    "line": "2 large carrots, 1/4-inch rounds (about 1 cup )",
    "lineText": "2 large carrots, 1/4-inch rounds (about 1 cup )",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": null,
  },
  {
    "ingredientText": "chicken stock",
    "line": "3 cups chicken stock",
    "lineText": "3 cups chicken stock",
    "quantityMax": 3,
    "quantityMin": 3,
    "unit": "cup",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Quick and Easy Brownies (King Arthur Baking)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "King Arthur Unbleached All-Purpose Flour",
    "line": "1 cup (120g) King Arthur Unbleached All-Purpose Flour",
    "lineText": "1 cup (120g) King Arthur Unbleached All-Purpose Flour",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
  {
    "ingredientText": "unsweetened cocoa, Dutch-process or natural",
    "line": "3/4 cup (64g) unsweetened cocoa, Dutch-process or natural",
    "lineText": "3/4 cup (64g) unsweetened cocoa, Dutch-process or natural",
    "quantityMax": 0.75,
    "quantityMin": 0.75,
    "unit": "cup",
  },
  {
    "ingredientText": "granulated sugar",
    "line": "1 3/4 cups (347g) granulated sugar",
    "lineText": "1 3/4 cups (347g) granulated sugar",
    "quantityMax": 1.75,
    "quantityMin": 1.75,
    "unit": "cup",
  },
  {
    "ingredientText": "table salt",
    "line": "1/2 teaspoon table salt",
    "lineText": "1/2 teaspoon table salt",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "baking powder",
    "line": "1/4 teaspoon baking powder",
    "lineText": "1/4 teaspoon baking powder",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "tsp",
  },
  {
    "ingredientText": "espresso powder, optional; for enhanced chocolate flavor",
    "line": "1 teaspoon espresso powder, optional; for enhanced chocolate flavor",
    "lineText": "1 teaspoon espresso powder, optional; for enhanced chocolate flavor",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "large eggs",
    "line": "3 large eggs",
    "lineText": "3 large eggs",
    "quantityMax": 3,
    "quantityMin": 3,
    "unit": null,
  },
  {
    "ingredientText": "unsalted butter, melted",
    "line": "8 tablespoons (113g) unsalted butter, melted",
    "lineText": "8 tablespoons (113g) unsalted butter, melted",
    "quantityMax": 8,
    "quantityMin": 8,
    "unit": "tbsp",
  },
  {
    "ingredientText": "vegetable oil",
    "line": "1/4 cup (50g) vegetable oil",
    "lineText": "1/4 cup (50g) vegetable oil",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "cup",
  },
  {
    "ingredientText": "King Arthur Pure Vanilla Extract",
    "line": "2 teaspoons King Arthur Pure Vanilla Extract",
    "lineText": "2 teaspoons King Arthur Pure Vanilla Extract",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "semisweet chocolate chips, optional",
    "line": "1 cup (170g) semisweet chocolate chips, optional",
    "lineText": "1 cup (170g) semisweet chocolate chips, optional",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Recipe on sallysbakingaddiction.com (exact page not recorded)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "all-purpose flour",
    "line": "1 and 3/4 cups (219g) all-purpose flour",
    "lineText": "1 and 3/4 cups (219g) all-purpose flour",
    "quantityMax": 1.75,
    "quantityMin": 1.75,
    "unit": "cup",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Soft Chocolate Chip Cookies (King Arthur Baking)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "unsalted butter",
    "line": "6 tablespoons (85g) unsalted butter",
    "lineText": "6 tablespoons (85g) unsalted butter",
    "quantityMax": 6,
    "quantityMin": 6,
    "unit": "tbsp",
  },
  {
    "ingredientText": "light brown sugar or dark brown sugar, packed",
    "line": "1 cup (213g) light brown sugar or dark brown sugar, packed",
    "lineText": "1 cup (213g) light brown sugar or dark brown sugar, packed",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
  {
    "ingredientText": "King Arthur Pure Vanilla Extract",
    "line": "2 teaspoons King Arthur Pure Vanilla Extract",
    "lineText": "2 teaspoons King Arthur Pure Vanilla Extract",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "table salt",
    "line": "3/4 teaspoon table salt",
    "lineText": "3/4 teaspoon table salt",
    "quantityMax": 0.75,
    "quantityMin": 0.75,
    "unit": "tsp",
  },
  {
    "ingredientText": "baking soda",
    "line": "1/2 teaspoon baking soda",
    "lineText": "1/2 teaspoon baking soda",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "baking powder",
    "line": "1/2 teaspoon baking powder",
    "lineText": "1/2 teaspoon baking powder",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "large egg",
    "line": "1 large egg",
    "lineText": "1 large egg",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "King Arthur Golden Wheat Flour",
    "line": "2 cups (227g) King Arthur Golden Wheat Flour",
    "lineText": "2 cups (227g) King Arthur Golden Wheat Flour",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "cup",
  },
  {
    "ingredientText": "semisweet chocolate chips or one (180g) chocolate bar, chopped",
    "line": "2 cups (340g) semisweet chocolate chips or one (180g) chocolate bar, chopped",
    "lineText": "2 cups (340g) semisweet chocolate chips or one (180g) chocolate bar, chopped",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "cup",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Spanish Chickpeas and Rice (Budget Bytes)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "olive oil",
    "line": "2 Tbsp olive oil",
    "lineText": "2 Tbsp olive oil",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tbsp",
  },
  {
    "ingredientText": "cloves garlic",
    "line": "2 cloves garlic",
    "lineText": "2 cloves garlic",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": null,
  },
  {
    "ingredientText": "smoked paprika",
    "line": "1/2 Tbsp smoked paprika",
    "lineText": "1/2 Tbsp smoked paprika",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tbsp",
  },
  {
    "ingredientText": "ground cumin",
    "line": "1 tsp ground cumin",
    "lineText": "1 tsp ground cumin",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "dried oregano",
    "line": "1/2 tsp dried oregano",
    "lineText": "1/2 tsp dried oregano",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "cayenne pepper",
    "line": "1/4 tsp cayenne pepper",
    "lineText": "1/4 tsp cayenne pepper",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "tsp",
  },
  {
    "ingredientText": null,
    "line": "Freshly cracked black pepper",
    "lineText": "Freshly cracked black pepper",
    "quantityMax": null,
    "quantityMin": null,
    "unit": null,
  },
  {
    "ingredientText": "yellow onion",
    "line": "1 yellow onion",
    "lineText": "1 yellow onion",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "uncooked long grain white rice",
    "line": "1 cup uncooked long grain white rice",
    "lineText": "1 cup uncooked long grain white rice",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
  {
    "ingredientText": "15oz. can diced tomatoes",
    "line": "1 15oz. can diced tomatoes",
    "lineText": "1 15oz. can diced tomatoes",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "15oz. can quartered artichoke hearts",
    "line": "1 15oz. can quartered artichoke hearts",
    "lineText": "1 15oz. can quartered artichoke hearts",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "15oz. can chickpeas",
    "line": "1 15oz. can chickpeas",
    "lineText": "1 15oz. can chickpeas",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "vegetable broth*",
    "line": "1.5 cups vegetable broth*",
    "lineText": "1.5 cups vegetable broth*",
    "quantityMax": 1.5,
    "quantityMin": 1.5,
    "unit": "cup",
  },
  {
    "ingredientText": "salt (or to taste)",
    "line": "1/2 tsp salt (or to taste)",
    "lineText": "1/2 tsp salt (or to taste)",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "tsp",
  },
  {
    "ingredientText": "bunch fresh parsley",
    "line": "1/4 bunch fresh parsley",
    "lineText": "1/4 bunch fresh parsley",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": null,
  },
  {
    "ingredientText": "fresh lemon",
    "line": "1 fresh lemon",
    "lineText": "1 fresh lemon",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "Super Simple Coconut Chicken Tikka Masala (Half Baked Harvest)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "medium yellow onion, quartered",
    "line": "1 medium yellow onion, quartered",
    "lineText": "1 medium yellow onion, quartered",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "shallot, halved",
    "line": "1 shallot, halved",
    "lineText": "1 shallot, halved",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "cloves garlic",
    "line": "6 cloves garlic",
    "lineText": "6 cloves garlic",
    "quantityMax": 6,
    "quantityMin": 6,
    "unit": null,
  },
  {
    "ingredientText": "(1-inch) pieces fresh ginger, peeled",
    "line": "2 (1-inch) pieces fresh ginger, peeled",
    "lineText": "2 (1-inch) pieces fresh ginger, peeled",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": null,
  },
  {
    "ingredientText": "garam masala",
    "line": "3 tablespoons garam masala",
    "lineText": "3 tablespoons garam masala",
    "quantityMax": 3,
    "quantityMin": 3,
    "unit": "tbsp",
  },
  {
    "ingredientText": "ground turmeric",
    "line": "2 teaspoons ground turmeric",
    "lineText": "2 teaspoons ground turmeric",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "kosher salt",
    "line": "2 teaspoons kosher salt",
    "lineText": "2 teaspoons kosher salt",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "crushed red pepper flakes",
    "line": "1 teaspoon crushed red pepper flakes",
    "lineText": "1 teaspoon crushed red pepper flakes",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": null,
    "line": "Zest of 1 lemon",
    "lineText": "Zest of 1 lemon",
    "quantityMax": null,
    "quantityMin": null,
    "unit": null,
  },
  {
    "ingredientText": "boneless skinless chicken breast, cubed",
    "line": "2 pounds boneless skinless chicken breast, cubed",
    "lineText": "2 pounds boneless skinless chicken breast, cubed",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "lb",
  },
  {
    "ingredientText": "full-fat plain Greek yogurt",
    "line": "½ cup full-fat plain Greek yogurt",
    "lineText": "½ cup full-fat plain Greek yogurt",
    "quantityMax": 0.5,
    "quantityMin": 0.5,
    "unit": "cup",
  },
  {
    "ingredientText": "can (14 ounce) full-fat unsweetened coconut milk",
    "line": "1 can (14 ounce) full-fat unsweetened coconut milk",
    "lineText": "1 can (14 ounce) full-fat unsweetened coconut milk",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "can (6 ounce) tomato paste",
    "line": "1 can (6 ounce) tomato paste",
    "lineText": "1 can (6 ounce) tomato paste",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": null,
  },
  {
    "ingredientText": "cilantro, chopped",
    "line": "¼ cup cilantro, chopped",
    "lineText": "¼ cup cilantro, chopped",
    "quantityMax": 0.25,
    "quantityMin": 0.25,
    "unit": "cup",
  },
  {
    "ingredientText": "cooked rice, for serving",
    "line": "3 cups cooked rice, for serving",
    "lineText": "3 cups cooked rice, for serving",
    "quantityMax": 3,
    "quantityMin": 3,
    "unit": "cup",
  },
]
`;

exports[`parseQuantity — real-world ingredient corpus parses every line from "The Best Chocolate Chip Cookies (Just A Pinch)" without throwing, matching the recorded snapshot 1`] = `
[
  {
    "ingredientText": "butter flavored shortening",
    "line": "2 cups butter flavored shortening",
    "lineText": "2 cups butter flavored shortening",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "cup",
  },
  {
    "ingredientText": "packed brown sugar",
    "line": "1 1/2 cups packed brown sugar",
    "lineText": "1 1/2 cups packed brown sugar",
    "quantityMax": 1.5,
    "quantityMin": 1.5,
    "unit": "cup",
  },
  {
    "ingredientText": "white sugar",
    "line": "1 1/2 cups white sugar",
    "lineText": "1 1/2 cups white sugar",
    "quantityMax": 1.5,
    "quantityMin": 1.5,
    "unit": "cup",
  },
  {
    "ingredientText": "eggs",
    "line": "4 eggs",
    "lineText": "4 eggs",
    "quantityMax": 4,
    "quantityMin": 4,
    "unit": null,
  },
  {
    "ingredientText": "vanilla extract",
    "line": "4 teaspoons vanilla extract",
    "lineText": "4 teaspoons vanilla extract",
    "quantityMax": 4,
    "quantityMin": 4,
    "unit": "tsp",
  },
  {
    "ingredientText": "all-purpose flour",
    "line": "4 1/2 cups all-purpose flour",
    "lineText": "4 1/2 cups all-purpose flour",
    "quantityMax": 4.5,
    "quantityMin": 4.5,
    "unit": "cup",
  },
  {
    "ingredientText": "baking soda",
    "line": "2 teaspoons baking soda",
    "lineText": "2 teaspoons baking soda",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "tsp",
  },
  {
    "ingredientText": "salt",
    "line": "1 teaspoon salt",
    "lineText": "1 teaspoon salt",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "tsp",
  },
  {
    "ingredientText": "semisweet chocolate chips",
    "line": "2 cups semisweet chocolate chips",
    "lineText": "2 cups semisweet chocolate chips",
    "quantityMax": 2,
    "quantityMin": 2,
    "unit": "cup",
  },
  {
    "ingredientText": "flaked coconut",
    "line": "1 cup flaked coconut",
    "lineText": "1 cup flaked coconut",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
  {
    "ingredientText": "chopped macadamia nuts",
    "line": "1 cup chopped macadamia nuts",
    "lineText": "1 cup chopped macadamia nuts",
    "quantityMax": 1,
    "quantityMin": 1,
    "unit": "cup",
  },
]
`;
